log
Thu 23 Mar 2023 02:19:46 PM UTC: 
 tests:  0|6
total_score: 0/70
968f38d
Thu 23 Mar 2023 02:35:11 PM UTC: 
 list.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:11: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
   44 |     Node *aux =list->current;
      |           ^~~
cc1: all warnings being treated as errors
Compilation failed
ed9dec8
Thu 23 Mar 2023 02:35:50 PM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|6
total_score: 0/70
faf5ec3
Thu 23 Mar 2023 02:40:53 PM UTC: 
 list.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
312c804
Thu 23 Mar 2023 02:46:14 PM UTC: 
 list.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  0|0
b0e7a5f
Thu 23 Mar 2023 02:47:37 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c:5:9: error: macro names must be identifiers
    5 | #define (list->current)->data CURRENT_DATA
      |         ^
list.c: In function ‘firstList’:
list.c:48:12: error: ‘CURRENT_DATA’ undeclared (first use in this function)
   48 |     return CURRENT_DATA;
      |            ^~~~~~~~~~~~
list.c:48:12: note: each undeclared identifier is reported only once for each function it appears in
list.c: In function ‘nextList’:
list.c:55:12: error: ‘CURRENT_DATA’ undeclared (first use in this function)
   55 |     return CURRENT_DATA;
      |            ^~~~~~~~~~~~
list.c: In function ‘lastList’:
list.c:60:12: error: ‘CURRENT_DATA’ undeclared (first use in this function)
   60 |     return CURRENT_DATA;
      |            ^~~~~~~~~~~~
list.c: In function ‘prevList’:
list.c:65:12: error: ‘CURRENT_DATA’ undeclared (first use in this function)
   65 |     return CURRENT_DATA;
      |            ^~~~~~~~~~~~
list.c: In function ‘firstList’:
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
list.c: In function ‘nextList’:
list.c:56:1: error: control reaches end of non-void function [-Werror=return-type]
   56 | }
      | ^
list.c: In function ‘lastList’:
list.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
   61 | }
      | ^
list.c: In function ‘prevList’:
list.c:66:1: error: control reaches end of non-void function [-Werror=return-type]
   66 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
417b391
Thu 23 Mar 2023 02:47:48 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
647a8e3
Thu 23 Mar 2023 02:48:17 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
d999926
Thu 23 Mar 2023 02:49:30 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:48:27: error: ‘list->current’ is a pointer; did you mean to use ‘->’?
   48 |     return (list->current).data ;
      |                           ^
      |                           ->
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9e4ef93
Thu 23 Mar 2023 03:20:56 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
50e526a
Thu 23 Mar 2023 03:21:19 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0687ff6
